[package]
name = "tSVoI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.14"
crossbeam = "0.8"
bytes = "1.4.0"

# for crypto
aes-gcm-siv = "0.11.1"
aead = "0.5.2"
base64 = "0.21.2"

# for networking
stunclient = "0.4.0"
urlencoding = "2.1.2"
url = "2.3.1"

# for audio
miniaudio = "0.10.0"
opus = "0.3.0"
bincode = "1.3.3"
serde = "1.0.164"
rand = "0.8"
ebur128 = "0.1.8"

# for logging
log = "0.4.5"
env_logger = "0.10.0"

#[patch.crates-io]
#miniaudio = { git = 'https://github.com/l1g4v/miniaudio-rs.git' }