[package]
name = "tSVoI"
version = "0.0.9"
authors = ["Leon"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
flume = "0.10.14"
serde_json = "1.0"

#crypto
aes-gcm-siv = "0.11.1"
aead = "0.5.2"
base64 = "0.21.2"

#networking
stunclient = "0.4.0"
bytes = "1.4.0"

#audio
miniaudio = "0.10.0"
opus = "0.3.0"

#logging
log = "0.4.5"
env_logger = "0.10.0"